--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,15 @@
 /node_modules
 /public/css
 /public/hot
-/public/js
+/public/js/*
+
 !/public/js/components
 !/public/js/views
+
 /public/mix-manifest.json
 /public/storage
 /storage/*.key
-!/storage/app/public/service
+
 /vendor
 .env
 .env.backup
