--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
-        "font-awesome": "^4.7.0"
+        "@fortawesome/fontawesome-free": "^5.15.4"
     }
 }
